--- a/index.html
+++ b/index.html
@@ -1,1 +1,76 @@
-LibreAI Project
+<HTML>
+<head>
+<title>LibreAI - Free AI Projects - Fun Co-Learning Space</title>
+<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,800|Roboto:400,500,700,900' rel='stylesheet'/>
+<link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css' rel='stylesheet'/>
+<style>
+html{font-family: 'Open Sans', sans-serif;color: #000;line-height: 1.4;font-size: 17px;}
+ul{list-style-type: square;}
+#container{
+    margin: 0 auto;
+    max-width: 800px;
+}
+  a{color:#c82502;text-decoration:none;}
+#menu a {padding-right:14px}
+   #social a{color:grey;}
+#left {
+    float: left;
+    padding: 2%;
+    width: 32%;
+text-align:center;
+}
+#right {
+    float: left;
+    padding: 2%;
+    width: 60%;
+}
+@media all and (max-width : 768px) {
+#left {
+    padding: 3%;
+    width: 94%;
+text-align:left;
+}    
+#right {
+    padding: 3%;
+    width: 94%;
+}
+}
+</style>
+</head>
+<body>
+<section id='left'>
+<a href='https://libreai.org' style='text-decoration:none'><span style='font-family: &#39;Roboto&#39;, sans-  serif;color: #D34836;font-size:220%;font-weight:700;line-height: 27px;'><h1>LibreAI</h1></span></a>
+<font size='2'>
+			We're Hiring:
+      <a href='https://libreai.org/p/jobs.html'>Job Opportunities</a></font><br/><br/>
+</section>
+<section id='right'>
+<b>LibreAI</b><br/>      
+      Free AI Projects - Fun Co-Learning Space<br/>
+<br/>
+		Yogyakarta, ID
+		<br/>
+	Kontak: <a href="mailto:info@libreai.org">info@libreai.org</a>
+<br/>
+<br/>LibreAI adalah rumah untuk projek AI yang bebas dan tempat belajar bersama untuk menghasilkan dan memajukan Developer di bidang AI, daftar sekarang untuk mulai belajar menjadi AI Developer dan membuat AI Startup atau kerja di bidang AI
+<br/><br/>
+<div id='menu'>
+<a href='https://libreai.org/p/more.html'>more</a>
+<a href='https://libreai.org/p/about.html'>bahasa indonesia</a>
+</div>
+<br/>
+
+<font color='grey' size='2'>
+		the name LibreAI and the above logo are trademarks of LibreAI<br/>
+		
+<a href='https://www.google.com/maps/place/LibreAI/@-7.7620547,110.4538813,17z/data=!4m8!1m2!2m1!1sLibreAI+Coworking+Space+Yogyakarta!3m4!1s0x2e7a5a45dff7cd75:0x44754e4580e18f86!8m2!3d-7.76206!4d110.45607'><i class='fa fa-map-marker'></i> libreai </a>		
+<a href='https://plus.google.com/b/112862079569461467513/112862079569461467513'><i class='fa fa-google-plus-official'></i> libreai </a>
+<a href='https://www.youtube.com/channel/UCo0z5wmAGfDc7TanpsUxbKQ?guided_help_flow=3'><i class='fa fa-youtube-play'></i> libreai </a>
+<a href='https://www.facebook.com/libreai'><i class='fa fa-facebook-official'></i> @libreai </a>
+<a href='https://www.instagram.com/libreai'><i class='fa fa-instagram'></i> @libreai </a>
+<a href='https://twitter.com/libreai'><i class='fa fa-twitter'></i> @libreai</a>
+	      </font>
+</section>
+
+</body>
+</HTML>
